# weapon-detection

./: README.md  RandomForest.ipynb  main.ipynb  pyproject.toml
content/.config/: .last_survey_prompt.yaml  .last_update_check.json
content/runs/detect/predict/: giphy.avi  mafia-mafia-game.avi  weaponsgta5.avi
content/runs/detect/train/: args.yaml  results.csv
content/yaml/: config.yaml
yaml/: config.yaml
