[project]
name = "weapon-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "p3rc1va1",email = "35celik.baha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "numpy (>=1.26.0,<2.2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "kagglehub (>=0.3.12,<0.4.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "ultralytics (>=8.3.131,<9.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
]

[tool.poetry]
packages = [{include = "weapon_detection", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
